# 9Launcher

./: .gitignore  .prettierignore  .qmllint.ini  CMakeLists.txt  FileIO.h  Footer.qml  LICENSE  Main.qml  README.md  build.sh  create_release.sh  dashboard.html  deploy_linux.sh  deploy_windows.sh  index.html  index_old.html  launch.sh  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  setup.html  tsconfig.json  vite.config.ts
MMaterial/: .gitignore  CMakeLists.txt  README.md
MMaterial/Charts/: BarChart.qml  CMakeLists.txt  WaterfallChart.qml
MMaterial/Charts/src/: ChartElement.cpp
MMaterial/Controls/: AbstractListItem.qml  Accordion.qml  Alert.qml  AlertGenerator.qml  Avatar.qml  Badge.qml  BadgeDot.qml  BadgeNumber.qml  Breadcrumbs.qml  BusyIndicator.qml  CMakeLists.txt  Checkable.qml  CheckedGroup.qml  CornerRadii.qml  ListItem.qml  ListItemContact.qml  MBorder.qml  MButton.qml  MCheckbox.qml  MCircularProgressBar.qml  MFabButton.qml  MLoader.qml  MProgressBar.qml  MRadioButton.qml  MRectangle.qml  MScrollIndicator.qml  MSlider.qml  MSwitch.qml  MTabButton.qml  MTabs.qml  MToggleButton.qml  MToolTip.qml  MaskedImage.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  MultiStateButton.qml  Popup.qml  ScrollBar.qml  ScrollView.qml  (+3 more)
MMaterial/Controls/Dialogs/: CMakeLists.txt  Dialog.qml  DialogButtonBox.qml  InputDialog.qml  LargeImageDialog.qml  MediumImageDialog.qml
MMaterial/Controls/Inputs/: AvatarInput.qml  CMakeLists.txt  ColorPicker.qml  ColorPreview.qml  ColorSelection.qml  ColorSlider.qml  ComboBox.qml  DatePicker.qml  InputsBackground.qml  MCalendar.qml  MDropdown.qml  MTextField.qml  OpacitySlider.qml  ScrollBar.qml  TextArea.qml  TextField.qml  TimePicker.qml
MMaterial/Controls/Inputs/src/: ColorHistoryModel.cpp  ColorHistoryModel.h  ColorPickerController.cpp  ColorPickerController.h  ColorPickerPreview.cpp  ColorPickerPreview.h  ColorSliderController.cpp  ColorSliderController.h  ColorUtils.cpp  ColorUtils.h  ShadePickerController.h
MMaterial/Controls/Pagination/: CMakeLists.txt  Paginator.qml  PaginatorArrows.qml  PaginatorBubble.qml  PaginatorSimple.qml
MMaterial/Controls/Sidebar/: CMakeLists.txt  CompactSidebar.qml  ExtendedSidebar.qml  MobileSidebar.qml  Sidebar.qml  SidebarCategoryLabel.qml  SidebarCompactItem.qml  SidebarData.qml  SidebarExtendedItem.qml  SidebarItem.qml  SidebarSeparator.qml
MMaterial/Controls/src/: AlertController.cpp  AlertController.h
MMaterial/Media/: CMakeLists.txt  HeavyIcon.qml  Icon.qml  IconBase.qml  IconData.qml  IconSet.qml  Icons.qml  Images.qml  LightIcon.qml
MMaterial/Network/: CMakeLists.txt  DownloadDialog.qml
MMaterial/Network/src/: DownloadController.cpp  DownloadController.h
MMaterial/UI/: .qmlls.ini  B1.qml  B2.qml  BaseFont.qml  BaseText.qml  BasicBlue.qml  BasicGreen.qml  BasicLightBlue.qml  BasicOrange.qml  BasicPurple.qml  BasicRed.qml  CMakeLists.txt  Caption.qml  DarkTheme.qml  DashedLine.qml  ElasticAnimation.qml  Font.qml  H1.qml  H2.qml  H3.qml  H4.qml  H5.qml  H6.qml  LightTheme.qml  Overline.qml  PaletteAction.qml  PaletteBasic.qml  PaletteCommon.qml  PaletteGrey.qml  PaletteSocial.qml  PaletteTransparent.qml  Pre.qml  PublicSans.qml  Size.qml  Subtitle1.qml  Subtitle2.qml  Teardrop.qml  Theme.qml  ThemeBase.qml  ThemeList.qml
MMaterial/UI/fonts/Public_Sans/: OFL.txt  README.txt
MMaterial/UI/fonts/Roboto_Mono/: README.txt
src-tauri/: Cargo.toml  log.txt  migrated.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/MMaterial/: CMakeLists.txt
src/MMaterial/Animations/: EasedAnimation.qml
src/MMaterial/Buttons/: CheckedGroup.qml  MButton.qml  MCheckbox.qml  MFabButton.qml  MRadioButton.qml  MSwitch.qml  MTabButton.qml  MTabs.qml  MToggleButton.qml
src/MMaterial/Charts/: BarChart.qml  ChartFunctions.qml  WaterfallChart.qml
src/MMaterial/Colors/: Theme.qml  ThemeList.qml
src/MMaterial/Colors/BaseObjects/: PaletteBackground.qml  PaletteBasic.qml  PaletteGrey.qml  PaletteOther.qml  PaletteText.qml  ThemeBase.qml
src/MMaterial/Colors/BasicPalettes/: BasicBlue.qml  BasicGreen.qml  BasicLightBlue.qml  BasicOrange.qml  BasicPurple.qml  BasicRed.qml
src/MMaterial/Colors/Themes/: DarkTheme.qml  LightTheme.qml
src/MMaterial/Components/: Accordion.qml  Avatar.qml  MBorder.qml  MRectangle.qml
src/MMaterial/Components/Alerts/: Alert.qml  AlertController.qml
src/MMaterial/Components/Badge/: Badge.qml  BadgeDot.qml  BadgeNumber.qml
src/MMaterial/Components/Common/: MLoader.qml  MScrollIndicator.qml  MSlider.qml  MToolTip.qml  MaskedImage.qml  Popup.qml  ScrollBar.qml
src/MMaterial/Components/Dialogs/: Dialog.qml  DialogButtonBox.qml  InputDialog.qml  LargeImageDialog.qml  MediumImageDialog.qml
src/MMaterial/Components/Inputs/: AvatarInput.qml  DatePicker.qml  MCalendar.qml  MDropdown.qml  MTextField.qml  TimePicker.qml
src/MMaterial/Components/Inputs/ColorPicker/: ColorPicker.qml  ColorPreview.qml  ColorSelection.qml  ColorSlider.qml  (+1 more)
src/MMaterial/Components/Menu/: Menu.qml  MenuItem.qml  MenuSeparator.qml
src/MMaterial/Components/Pagination/: Paginator.qml  PaginatorArrows.qml  PaginatorBubble.qml  PaginatorSimple.qml
src/MMaterial/Components/Progress/: BusyIndicator.qml  MCircularProgressBar.qml  MProgressBar.qml
src/MMaterial/Fonts/: BaseFont.qml  PublicSans.qml
src/MMaterial/Fonts/Texts/: B1.qml  B2.qml  BaseText.qml  Caption.qml  H1.qml  H2.qml  H3.qml  H4.qml  H5.qml  H6.qml  Overline.qml  Subtitle1.qml  Subtitle2.qml
src/MMaterial/Icons/: HeavyIcon.qml  Icon.qml  IconBase.qml  IconFont.qml  Icons.qml  Images.qml  LightIcon.qml
src/MMaterial/Lists/: AbstractListItem.qml  ListItem.qml  ListItemContact.qml
src/MMaterial/Settings/: Size.qml
src/MMaterial/Sidebar/: CompactSidebar.qml  ExtendedSidebar.qml  MobileSidebar.qml  Sidebar.qml  SidebarCategoryLabel.qml  SidebarCompactItem.qml  SidebarExtendedItem.qml  SidebarItem.qml  SidebarSeparator.qml
src/MMaterial/src/: ChartElement.h
src/MMaterial/src/ColorPicker/: ShadePickerController.cpp  ShadePickerController.h
(+102 files in other folders)
