[package]
name = "ninelauncher"
version = "1.3.2"
description = "9Launcher"
authors = ["wearr"]
license = "MIT"
repository = "https://github.com/wearrrrr/9Launcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "fs-rename-file", "dialog-all", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-file", "fs-remove-file", "fs-write-file", "http-all", "os-all", "path-all", "shell-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
lnk_parser = { git="https://github.com/AbdulRhmanAlfaifi/lnk_parser" }
discord-presence = "0.5.14"
chrono = "0.4.26"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
